RESOLVED FIXED70173
REGRESSION(r97533): fast/forms/select-script-onchange.html failed after
https://bugs.webkit.org/show_bug.cgi?id=70173
Summary REGRESSION(r97533): fast/forms/select-script-onchange.html failed after
Tamas Czene
Reported 2011-10-15 01:14:47 PDT
--- /ramdisk/qt-linux-64-release/build/layout-test-results/fast/forms/select-script-onchange-expected.txt +++ /ramdisk/qt-linux-64-release/build/layout-test-results/fast/forms/select-script-onchange-actual.txt @@ -1,6 +1,8 @@ Test for http://bugs.webkit.org/show_bug.cgi?id=23721 Changing dropdown's selectedIndex within onchange handler fires another onchange. -SUCCESS + +FAILURE: onchange(1) called 1 times. +FAILURE: onchange(2) called 2 times. This select changes on focus: should not fire onchange. This select changes on change: should only fire onchange once.
Attachments
Patch (3.64 KB, patch)
2011-10-15 13:46 PDT, Darin Adler
no flags
Patch (1.22 KB, patch)
2011-10-15 14:24 PDT, Darin Adler
no flags
Patch (4.59 KB, patch)
2011-10-15 14:36 PDT, Darin Adler
no flags
Csaba Osztrogonác
Comment 1 2011-10-15 02:13:05 PDT
It fails on SL and on Qt bot too.
Ryosuke Niwa
Comment 2 2011-10-15 11:14:45 PDT
View in context: https://bugs.webkit.org/attachment.cgi?id=111075&action=review > Source/WebCore/html/HTMLOptionElement.cpp:192 > - HTMLSelectElement* select = ownerSelectElement(); > - if (select) > - select->childrenChanged(changedByParser); > + if (HTMLSelectElement* select = ownerSelectElement()) > + select->optionElementChildrenChanged(); Maybe this change?
Darin Adler
Comment 3 2011-10-15 13:01:45 PDT
I’ll investigate now.
Darin Adler
Comment 4 2011-10-15 13:46:05 PDT
WebKit Review Bot
Comment 5 2011-10-15 14:13:10 PDT
Comment on attachment 111142 [details] Patch Attachment 111142 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/10075313 New failing tests: fast/events/popup-when-select-change.html fast/events/onchange-select-popup.html
Darin Adler
Comment 6 2011-10-15 14:24:34 PDT
Darin Adler
Comment 7 2011-10-15 14:24:50 PDT
Comment on attachment 111145 [details] Patch OK, lets try a more targeted fix.
Darin Adler
Comment 8 2011-10-15 14:25:48 PDT
Hmmpf, even this smaller change seems to break onchange-select-popup.html
Darin Adler
Comment 9 2011-10-15 14:36:56 PDT
Darin Adler
Comment 10 2011-10-15 14:37:32 PDT
New patch; this one passes all the tests in fast/events.
Adam Barth
Comment 11 2011-10-15 14:40:23 PDT
Comment on attachment 111146 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=111146&action=review > Source/WebCore/html/HTMLSelectElement.cpp:1388 > + setSelectedIndex(listToOptionIndex(index), true, false, true); IMHO, this is calling out for enum arguments.
Ryosuke Niwa
Comment 12 2011-10-15 14:40:33 PDT
Comment on attachment 111146 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=111146&action=review > Source/WebCore/html/HTMLSelectElement.cpp:1009 > + setSelectedIndex(listToOptionIndex(listIndex), true, false, true); These boolean values are hurting my eyes :(
Ryosuke Niwa
Comment 13 2011-10-15 14:41:10 PDT
(In reply to comment #11) > (From update of attachment 111146 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=111146&action=review > > > Source/WebCore/html/HTMLSelectElement.cpp:1388 > > + setSelectedIndex(listToOptionIndex(index), true, false, true); > > IMHO, this is calling out for enum arguments. I think we can all agree to that.
Darin Adler
Comment 14 2011-10-15 15:03:31 PDT
Yes, we all agree. Even my ChangeLog agrees! And the patch I am working on right now, too.
WebKit Review Bot
Comment 15 2011-10-15 15:46:52 PDT
Comment on attachment 111146 [details] Patch Clearing flags on attachment: 111146 Committed r97565: <http://trac.webkit.org/changeset/97565>
WebKit Review Bot
Comment 16 2011-10-15 15:46:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.