REGRESSION(r97533): fast/forms/select-script-onchange.html failed after https://bugs.webkit.org/show_bug.cgi?id=70173

Reviewed by Ryosuke Niwa.

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::setValue): Removed unneeded boolean argument
[true for deselect].
(WebCore::HTMLSelectElement::menuListDefaultEventHandler): Added explicit
boolean arguments for all calls to setSelectedIndex to restore pre-r97533
behavior.
(WebCore::HTMLSelectElement::typeAheadFind): Ditto.
(WebCore::HTMLSelectElement::accessKeySetSelectedIndex): Ditto.

* html/HTMLSelectElement.h:
Removed default of true for userDrivenChange. Each caller should pass it
explicitly. Longer term we should use an enum instead of a boolean or find
some other way of avoiding the argument.
(WebCore::HTMLSelectElement::setSelectedIndex):
Pass false for userDrivenChange as the old code did pre-r97533.


git-svn-id: svn://svn.chromium.org/blink/trunk@97565 bbb929c8-8fbe-4397-9dbb-9b2b20218538